plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'com.bmuschko.docker-spring-boot-application' version '6.1.4'
    id 'org.liquibase.gradle' version '2.0.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


ext {
    set('springCloudVersion', "2020.0.4")
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'junit:junit:4.13.1'
    implementation 'org.projectlombok:lombok:1.18.22'
    compileOnly 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.2'

    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.liquibase:liquibase-core:4.20.0'

    annotationProcessor 'org.projectlombok:lombok'
    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.197'

    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

    implementation 'org.apache.poi:poi:5.0.0'
    implementation 'org.apache.poi:poi-ooxml:5.0.0'

    implementation group: 'org.json', name: 'json', version: '20180813'
    implementation 'org.jsoup:jsoup:1.14.3'

    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
    implementation group: 'io.springfox', name: 'springfox-data-rest', version: '3.0.0'
    implementation group: 'io.springfox', name: 'springfox-bean-validators', version: '3.0.0'
    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'


}



tasks.named('test') {
    useJUnitPlatform()

}
